minic.output
Estado 77 conflictos: 1 desplazamiento/reducción


Gramática

    0 $accept: program $end

    1 program: FUNC ID APAR CPAR ALLAVE declarations statement_list CLLAVE

    2 $@1: %empty

    3 declarations: declarations VAR $@1 identifier_list PTOCOMA

    4 $@2: %empty

    5 declarations: declarations LET $@2 identifier_list PTOCOMA
    6             | %empty

    7 identifier_list: asig
    8                | identifier_list COMA asig

    9 asig: ID
   10     | ID IGUAL expression

   11 statement_list: statement_list statement
   12               | %empty

   13 statement: ID IGUAL expression PTOCOMA
   14          | ALLAVE statement_list CLLAVE
   15          | IF APAR expression CPAR statement ELSE statement
   16          | IF APAR expression CPAR statement
   17          | WHILE APAR expression CPAR statement
   18          | DO statement WHILE APAR expression CPAR
   19          | PRINT print_list PTOCOMA
   20          | READ read_list PTOCOMA
   21          | error CLLAVE
   22          | error PTOCOMA

   23 print_list: print_item
   24           | print_list COMA print_item

   25 print_item: expression
   26           | CADENA

   27 read_list: ID
   28          | read_list COMA ID

   29 expression: expression MAS expression
   30           | expression MENOS expression
   31           | expression POR expression
   32           | expression ENTRE expression
   33           | MENOS expression
   34           | APAR expression CPAR
   35           | ID
   36           | ENT


Terminales con las reglas donde aparecen

$end (0) 0
error (256) 21 22
FUNC (258) 1
VAR (259) 3
LET (260) 5
IF (261) 15 16
ELSE (262) 15
WHILE (263) 17 18
PRINT (264) 19
READ (265) 20
APAR (266) 1 15 16 17 18 34
CPAR (267) 1 15 16 17 18 34
PTOCOMA (268) 3 5 13 19 20 22
COMA (269) 8 24 28
MAS (270) 29
MENOS (271) 30 33
POR (272) 31
ENTRE (273) 32
IGUAL (274) 10 13
ALLAVE (275) 1 14
CLLAVE (276) 1 14 21
CADENA (277) 26
DO (278) 18
ID (279) 1 9 10 13 27 28 35
ENT (280) 36
UMENOS (281)


No terminales con las reglas donde aparecen

$accept (27)
    en la izquierda: 0
program (28)
    en la izquierda: 1, en la derecha: 0
declarations (29)
    en la izquierda: 3 5 6, en la derecha: 1 3 5
$@1 (30)
    en la izquierda: 2, en la derecha: 3
$@2 (31)
    en la izquierda: 4, en la derecha: 5
identifier_list (32)
    en la izquierda: 7 8, en la derecha: 3 5 8
asig (33)
    en la izquierda: 9 10, en la derecha: 7 8
statement_list (34)
    en la izquierda: 11 12, en la derecha: 1 11 14
statement (35)
    en la izquierda: 13 14 15 16 17 18 19 20 21 22, en la derecha:
    11 15 16 17 18
print_list (36)
    en la izquierda: 23 24, en la derecha: 19 24
print_item (37)
    en la izquierda: 25 26, en la derecha: 23 24
read_list (38)
    en la izquierda: 27 28, en la derecha: 20 28
expression (39)
    en la izquierda: 29 30 31 32 33 34 35 36, en la derecha: 10 13
    15 16 17 18 25 29 30 31 32 33 34


Estado 0

    0 $accept: . program $end

    FUNC  desplazar e ir al estado 1

    program  ir al estado 2


Estado 1

    1 program: FUNC . ID APAR CPAR ALLAVE declarations statement_list CLLAVE

    ID  desplazar e ir al estado 3


Estado 2

    0 $accept: program . $end

    $end  desplazar e ir al estado 4


Estado 3

    1 program: FUNC ID . APAR CPAR ALLAVE declarations statement_list CLLAVE

    APAR  desplazar e ir al estado 5


Estado 4

    0 $accept: program $end .

    $default  aceptar


Estado 5

    1 program: FUNC ID APAR . CPAR ALLAVE declarations statement_list CLLAVE

    CPAR  desplazar e ir al estado 6


Estado 6

    1 program: FUNC ID APAR CPAR . ALLAVE declarations statement_list CLLAVE

    ALLAVE  desplazar e ir al estado 7


Estado 7

    1 program: FUNC ID APAR CPAR ALLAVE . declarations statement_list CLLAVE

    $default  reduce usando la regla 6 (declarations)

    declarations  ir al estado 8


Estado 8

    1 program: FUNC ID APAR CPAR ALLAVE declarations . statement_list CLLAVE
    3 declarations: declarations . VAR $@1 identifier_list PTOCOMA
    5             | declarations . LET $@2 identifier_list PTOCOMA

    VAR  desplazar e ir al estado 9
    LET  desplazar e ir al estado 10

    $default  reduce usando la regla 12 (statement_list)

    statement_list  ir al estado 11


Estado 9

    3 declarations: declarations VAR . $@1 identifier_list PTOCOMA

    $default  reduce usando la regla 2 ($@1)

    $@1  ir al estado 12


Estado 10

    5 declarations: declarations LET . $@2 identifier_list PTOCOMA

    $default  reduce usando la regla 4 ($@2)

    $@2  ir al estado 13


Estado 11

    1 program: FUNC ID APAR CPAR ALLAVE declarations statement_list . CLLAVE
   11 statement_list: statement_list . statement

    error   desplazar e ir al estado 14
    IF      desplazar e ir al estado 15
    WHILE   desplazar e ir al estado 16
    PRINT   desplazar e ir al estado 17
    READ    desplazar e ir al estado 18
    ALLAVE  desplazar e ir al estado 19
    CLLAVE  desplazar e ir al estado 20
    DO      desplazar e ir al estado 21
    ID      desplazar e ir al estado 22

    statement  ir al estado 23


Estado 12

    3 declarations: declarations VAR $@1 . identifier_list PTOCOMA

    ID  desplazar e ir al estado 24

    identifier_list  ir al estado 25
    asig             ir al estado 26


Estado 13

    5 declarations: declarations LET $@2 . identifier_list PTOCOMA

    ID  desplazar e ir al estado 24

    identifier_list  ir al estado 27
    asig             ir al estado 26


Estado 14

   21 statement: error . CLLAVE
   22          | error . PTOCOMA

    PTOCOMA  desplazar e ir al estado 28
    CLLAVE   desplazar e ir al estado 29


Estado 15

   15 statement: IF . APAR expression CPAR statement ELSE statement
   16          | IF . APAR expression CPAR statement

    APAR  desplazar e ir al estado 30


Estado 16

   17 statement: WHILE . APAR expression CPAR statement

    APAR  desplazar e ir al estado 31


Estado 17

   19 statement: PRINT . print_list PTOCOMA

    APAR    desplazar e ir al estado 32
    MENOS   desplazar e ir al estado 33
    CADENA  desplazar e ir al estado 34
    ID      desplazar e ir al estado 35
    ENT     desplazar e ir al estado 36

    print_list  ir al estado 37
    print_item  ir al estado 38
    expression  ir al estado 39


Estado 18

   20 statement: READ . read_list PTOCOMA

    ID  desplazar e ir al estado 40

    read_list  ir al estado 41


Estado 19

   14 statement: ALLAVE . statement_list CLLAVE

    $default  reduce usando la regla 12 (statement_list)

    statement_list  ir al estado 42


Estado 20

    1 program: FUNC ID APAR CPAR ALLAVE declarations statement_list CLLAVE .

    $default  reduce usando la regla 1 (program)


Estado 21

   18 statement: DO . statement WHILE APAR expression CPAR

    error   desplazar e ir al estado 14
    IF      desplazar e ir al estado 15
    WHILE   desplazar e ir al estado 16
    PRINT   desplazar e ir al estado 17
    READ    desplazar e ir al estado 18
    ALLAVE  desplazar e ir al estado 19
    DO      desplazar e ir al estado 21
    ID      desplazar e ir al estado 22

    statement  ir al estado 43


Estado 22

   13 statement: ID . IGUAL expression PTOCOMA

    IGUAL  desplazar e ir al estado 44


Estado 23

   11 statement_list: statement_list statement .

    $default  reduce usando la regla 11 (statement_list)


Estado 24

    9 asig: ID .
   10     | ID . IGUAL expression

    IGUAL  desplazar e ir al estado 45

    $default  reduce usando la regla 9 (asig)


Estado 25

    3 declarations: declarations VAR $@1 identifier_list . PTOCOMA
    8 identifier_list: identifier_list . COMA asig

    PTOCOMA  desplazar e ir al estado 46
    COMA     desplazar e ir al estado 47


Estado 26

    7 identifier_list: asig .

    $default  reduce usando la regla 7 (identifier_list)


Estado 27

    5 declarations: declarations LET $@2 identifier_list . PTOCOMA
    8 identifier_list: identifier_list . COMA asig

    PTOCOMA  desplazar e ir al estado 48
    COMA     desplazar e ir al estado 47


Estado 28

   22 statement: error PTOCOMA .

    $default  reduce usando la regla 22 (statement)


Estado 29

   21 statement: error CLLAVE .

    $default  reduce usando la regla 21 (statement)


Estado 30

   15 statement: IF APAR . expression CPAR statement ELSE statement
   16          | IF APAR . expression CPAR statement

    APAR   desplazar e ir al estado 32
    MENOS  desplazar e ir al estado 33
    ID     desplazar e ir al estado 35
    ENT    desplazar e ir al estado 36

    expression  ir al estado 49


Estado 31

   17 statement: WHILE APAR . expression CPAR statement

    APAR   desplazar e ir al estado 32
    MENOS  desplazar e ir al estado 33
    ID     desplazar e ir al estado 35
    ENT    desplazar e ir al estado 36

    expression  ir al estado 50


Estado 32

   34 expression: APAR . expression CPAR

    APAR   desplazar e ir al estado 32
    MENOS  desplazar e ir al estado 33
    ID     desplazar e ir al estado 35
    ENT    desplazar e ir al estado 36

    expression  ir al estado 51


Estado 33

   33 expression: MENOS . expression

    APAR   desplazar e ir al estado 32
    MENOS  desplazar e ir al estado 33
    ID     desplazar e ir al estado 35
    ENT    desplazar e ir al estado 36

    expression  ir al estado 52


Estado 34

   26 print_item: CADENA .

    $default  reduce usando la regla 26 (print_item)


Estado 35

   35 expression: ID .

    $default  reduce usando la regla 35 (expression)


Estado 36

   36 expression: ENT .

    $default  reduce usando la regla 36 (expression)


Estado 37

   19 statement: PRINT print_list . PTOCOMA
   24 print_list: print_list . COMA print_item

    PTOCOMA  desplazar e ir al estado 53
    COMA     desplazar e ir al estado 54


Estado 38

   23 print_list: print_item .

    $default  reduce usando la regla 23 (print_list)


Estado 39

   25 print_item: expression .
   29 expression: expression . MAS expression
   30           | expression . MENOS expression
   31           | expression . POR expression
   32           | expression . ENTRE expression

    MAS    desplazar e ir al estado 55
    MENOS  desplazar e ir al estado 56
    POR    desplazar e ir al estado 57
    ENTRE  desplazar e ir al estado 58

    $default  reduce usando la regla 25 (print_item)


Estado 40

   27 read_list: ID .

    $default  reduce usando la regla 27 (read_list)


Estado 41

   20 statement: READ read_list . PTOCOMA
   28 read_list: read_list . COMA ID

    PTOCOMA  desplazar e ir al estado 59
    COMA     desplazar e ir al estado 60


Estado 42

   11 statement_list: statement_list . statement
   14 statement: ALLAVE statement_list . CLLAVE

    error   desplazar e ir al estado 14
    IF      desplazar e ir al estado 15
    WHILE   desplazar e ir al estado 16
    PRINT   desplazar e ir al estado 17
    READ    desplazar e ir al estado 18
    ALLAVE  desplazar e ir al estado 19
    CLLAVE  desplazar e ir al estado 61
    DO      desplazar e ir al estado 21
    ID      desplazar e ir al estado 22

    statement  ir al estado 23


Estado 43

   18 statement: DO statement . WHILE APAR expression CPAR

    WHILE  desplazar e ir al estado 62


Estado 44

   13 statement: ID IGUAL . expression PTOCOMA

    APAR   desplazar e ir al estado 32
    MENOS  desplazar e ir al estado 33
    ID     desplazar e ir al estado 35
    ENT    desplazar e ir al estado 36

    expression  ir al estado 63


Estado 45

   10 asig: ID IGUAL . expression

    APAR   desplazar e ir al estado 32
    MENOS  desplazar e ir al estado 33
    ID     desplazar e ir al estado 35
    ENT    desplazar e ir al estado 36

    expression  ir al estado 64


Estado 46

    3 declarations: declarations VAR $@1 identifier_list PTOCOMA .

    $default  reduce usando la regla 3 (declarations)


Estado 47

    8 identifier_list: identifier_list COMA . asig

    ID  desplazar e ir al estado 24

    asig  ir al estado 65


Estado 48

    5 declarations: declarations LET $@2 identifier_list PTOCOMA .

    $default  reduce usando la regla 5 (declarations)


Estado 49

   15 statement: IF APAR expression . CPAR statement ELSE statement
   16          | IF APAR expression . CPAR statement
   29 expression: expression . MAS expression
   30           | expression . MENOS expression
   31           | expression . POR expression
   32           | expression . ENTRE expression

    CPAR   desplazar e ir al estado 66
    MAS    desplazar e ir al estado 55
    MENOS  desplazar e ir al estado 56
    POR    desplazar e ir al estado 57
    ENTRE  desplazar e ir al estado 58


Estado 50

   17 statement: WHILE APAR expression . CPAR statement
   29 expression: expression . MAS expression
   30           | expression . MENOS expression
   31           | expression . POR expression
   32           | expression . ENTRE expression

    CPAR   desplazar e ir al estado 67
    MAS    desplazar e ir al estado 55
    MENOS  desplazar e ir al estado 56
    POR    desplazar e ir al estado 57
    ENTRE  desplazar e ir al estado 58


Estado 51

   29 expression: expression . MAS expression
   30           | expression . MENOS expression
   31           | expression . POR expression
   32           | expression . ENTRE expression
   34           | APAR expression . CPAR

    CPAR   desplazar e ir al estado 68
    MAS    desplazar e ir al estado 55
    MENOS  desplazar e ir al estado 56
    POR    desplazar e ir al estado 57
    ENTRE  desplazar e ir al estado 58


Estado 52

   29 expression: expression . MAS expression
   30           | expression . MENOS expression
   31           | expression . POR expression
   32           | expression . ENTRE expression
   33           | MENOS expression .

    $default  reduce usando la regla 33 (expression)


Estado 53

   19 statement: PRINT print_list PTOCOMA .

    $default  reduce usando la regla 19 (statement)


Estado 54

   24 print_list: print_list COMA . print_item

    APAR    desplazar e ir al estado 32
    MENOS   desplazar e ir al estado 33
    CADENA  desplazar e ir al estado 34
    ID      desplazar e ir al estado 35
    ENT     desplazar e ir al estado 36

    print_item  ir al estado 69
    expression  ir al estado 39


Estado 55

   29 expression: expression MAS . expression

    APAR   desplazar e ir al estado 32
    MENOS  desplazar e ir al estado 33
    ID     desplazar e ir al estado 35
    ENT    desplazar e ir al estado 36

    expression  ir al estado 70


Estado 56

   30 expression: expression MENOS . expression

    APAR   desplazar e ir al estado 32
    MENOS  desplazar e ir al estado 33
    ID     desplazar e ir al estado 35
    ENT    desplazar e ir al estado 36

    expression  ir al estado 71


Estado 57

   31 expression: expression POR . expression

    APAR   desplazar e ir al estado 32
    MENOS  desplazar e ir al estado 33
    ID     desplazar e ir al estado 35
    ENT    desplazar e ir al estado 36

    expression  ir al estado 72


Estado 58

   32 expression: expression ENTRE . expression

    APAR   desplazar e ir al estado 32
    MENOS  desplazar e ir al estado 33
    ID     desplazar e ir al estado 35
    ENT    desplazar e ir al estado 36

    expression  ir al estado 73


Estado 59

   20 statement: READ read_list PTOCOMA .

    $default  reduce usando la regla 20 (statement)


Estado 60

   28 read_list: read_list COMA . ID

    ID  desplazar e ir al estado 74


Estado 61

   14 statement: ALLAVE statement_list CLLAVE .

    $default  reduce usando la regla 14 (statement)


Estado 62

   18 statement: DO statement WHILE . APAR expression CPAR

    APAR  desplazar e ir al estado 75


Estado 63

   13 statement: ID IGUAL expression . PTOCOMA
   29 expression: expression . MAS expression
   30           | expression . MENOS expression
   31           | expression . POR expression
   32           | expression . ENTRE expression

    PTOCOMA  desplazar e ir al estado 76
    MAS      desplazar e ir al estado 55
    MENOS    desplazar e ir al estado 56
    POR      desplazar e ir al estado 57
    ENTRE    desplazar e ir al estado 58


Estado 64

   10 asig: ID IGUAL expression .
   29 expression: expression . MAS expression
   30           | expression . MENOS expression
   31           | expression . POR expression
   32           | expression . ENTRE expression

    MAS    desplazar e ir al estado 55
    MENOS  desplazar e ir al estado 56
    POR    desplazar e ir al estado 57
    ENTRE  desplazar e ir al estado 58

    $default  reduce usando la regla 10 (asig)


Estado 65

    8 identifier_list: identifier_list COMA asig .

    $default  reduce usando la regla 8 (identifier_list)


Estado 66

   15 statement: IF APAR expression CPAR . statement ELSE statement
   16          | IF APAR expression CPAR . statement

    error   desplazar e ir al estado 14
    IF      desplazar e ir al estado 15
    WHILE   desplazar e ir al estado 16
    PRINT   desplazar e ir al estado 17
    READ    desplazar e ir al estado 18
    ALLAVE  desplazar e ir al estado 19
    DO      desplazar e ir al estado 21
    ID      desplazar e ir al estado 22

    statement  ir al estado 77


Estado 67

   17 statement: WHILE APAR expression CPAR . statement

    error   desplazar e ir al estado 14
    IF      desplazar e ir al estado 15
    WHILE   desplazar e ir al estado 16
    PRINT   desplazar e ir al estado 17
    READ    desplazar e ir al estado 18
    ALLAVE  desplazar e ir al estado 19
    DO      desplazar e ir al estado 21
    ID      desplazar e ir al estado 22

    statement  ir al estado 78


Estado 68

   34 expression: APAR expression CPAR .

    $default  reduce usando la regla 34 (expression)


Estado 69

   24 print_list: print_list COMA print_item .

    $default  reduce usando la regla 24 (print_list)


Estado 70

   29 expression: expression . MAS expression
   29           | expression MAS expression .
   30           | expression . MENOS expression
   31           | expression . POR expression
   32           | expression . ENTRE expression

    POR    desplazar e ir al estado 57
    ENTRE  desplazar e ir al estado 58

    $default  reduce usando la regla 29 (expression)


Estado 71

   29 expression: expression . MAS expression
   30           | expression . MENOS expression
   30           | expression MENOS expression .
   31           | expression . POR expression
   32           | expression . ENTRE expression

    POR    desplazar e ir al estado 57
    ENTRE  desplazar e ir al estado 58

    $default  reduce usando la regla 30 (expression)


Estado 72

   29 expression: expression . MAS expression
   30           | expression . MENOS expression
   31           | expression . POR expression
   31           | expression POR expression .
   32           | expression . ENTRE expression

    $default  reduce usando la regla 31 (expression)


Estado 73

   29 expression: expression . MAS expression
   30           | expression . MENOS expression
   31           | expression . POR expression
   32           | expression . ENTRE expression
   32           | expression ENTRE expression .

    $default  reduce usando la regla 32 (expression)


Estado 74

   28 read_list: read_list COMA ID .

    $default  reduce usando la regla 28 (read_list)


Estado 75

   18 statement: DO statement WHILE APAR . expression CPAR

    APAR   desplazar e ir al estado 32
    MENOS  desplazar e ir al estado 33
    ID     desplazar e ir al estado 35
    ENT    desplazar e ir al estado 36

    expression  ir al estado 79


Estado 76

   13 statement: ID IGUAL expression PTOCOMA .

    $default  reduce usando la regla 13 (statement)


Estado 77

   15 statement: IF APAR expression CPAR statement . ELSE statement
   16          | IF APAR expression CPAR statement .

    ELSE  desplazar e ir al estado 80

    ELSE      [reduce usando la regla 16 (statement)]
    $default  reduce usando la regla 16 (statement)


Estado 78

   17 statement: WHILE APAR expression CPAR statement .

    $default  reduce usando la regla 17 (statement)


Estado 79

   18 statement: DO statement WHILE APAR expression . CPAR
   29 expression: expression . MAS expression
   30           | expression . MENOS expression
   31           | expression . POR expression
   32           | expression . ENTRE expression

    CPAR   desplazar e ir al estado 81
    MAS    desplazar e ir al estado 55
    MENOS  desplazar e ir al estado 56
    POR    desplazar e ir al estado 57
    ENTRE  desplazar e ir al estado 58


Estado 80

   15 statement: IF APAR expression CPAR statement ELSE . statement

    error   desplazar e ir al estado 14
    IF      desplazar e ir al estado 15
    WHILE   desplazar e ir al estado 16
    PRINT   desplazar e ir al estado 17
    READ    desplazar e ir al estado 18
    ALLAVE  desplazar e ir al estado 19
    DO      desplazar e ir al estado 21
    ID      desplazar e ir al estado 22

    statement  ir al estado 82


Estado 81

   18 statement: DO statement WHILE APAR expression CPAR .

    $default  reduce usando la regla 18 (statement)


Estado 82

   15 statement: IF APAR expression CPAR statement ELSE statement .

    $default  reduce usando la regla 15 (statement)
